Version finale fonctionnelle des entités et controlleurs pour les données relationnelle du site !
