# src/Controller/SuspensionController.php
@@ -9,6 +9,7 @@ use Symfony\Bundle\FrameworkBundle\Controller\AbstractController;
 use Symfony\Component\HttpFoundation\JsonResponse;
 use Symfony\Component\HttpFoundation\Request;
 use Symfony\Component\Routing\Annotation\Route;
+use DateTime;
 
 class SuspensionController extends AbstractController
 {
@@ -30,7 +31,7 @@ class SuspensionController extends AbstractController
 
         // Création d'une nouvelle suspension
         $suspension = new Suspension();
-        $suspension->setUtilisateur($utilisateur);  // Associer l'objet Utilisateur
+        $suspension->setUtilisateurId($utilisateur);  // Associer l'objet Utilisateur
         $suspension->setRaison($data['raison']);
         $suspension->setDateDebut(new \DateTime($data['date_debut']));
         $suspension->setDateFin(isset($data['date_fin']) ? new \DateTime($data['date_fin']) : null);
@@ -56,30 +57,12 @@ class SuspensionController extends AbstractController
         // Retourner les données de la suspension
         return new JsonResponse([
             'suspension_id' => $suspension->getSuspensionId(),
-            'utilisateur_id' => $suspension->getUtilisateur()->getUtilisateurId(),  // Utilisation de l'objet Utilisateur
+            'utilisateur_id' => $suspension->getUtilisateurId()->getUtilisateurId(),  // Utilisation de l'objet Utilisateur
             'raison' => $suspension->getRaison(),
             'date_debut' => $suspension->getDateDebut()->format('Y-m-d H:i:s'),
             'date_fin' => $suspension->getDateFin() ? $suspension->getDateFin()->format('Y-m-d H:i:s') : null,
             'sanction' => $suspension->getSanction(),
         ]);
-    }
-
-    #[Route('/suspension/list', methods: ['GET'])]
-    public function listSuspensions(EntityManagerInterface $em): JsonResponse
-    {
-        // Récupérer toutes les suspensions
-        $suspensions = $em->getRepository(Suspension::class)->findAll();
-
-        $suspensionArray = array_map(fn($suspension) => [
-            'suspension_id' => $suspension->getSuspensionId(),
-            'utilisateur_id' => $suspension->getUtilisateur()->getUtilisateurId(), // Utilisation de l'objet Utilisateur
-            'raison' => $suspension->getRaison(),
-            'date_debut' => $suspension->getDateDebut()->format('Y-m-d H:i:s'),
-            'date_fin' => $suspension->getDateFin() ? $suspension->getDateFin()->format('Y-m-d H:i:s') : null,
-            'sanction' => $suspension->getSanction(),
-        ], $suspensions);
-
-        return new JsonResponse($suspensionArray);
     }
 }
 
